# Python_OnlineStore_Sumbulov

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  example_goods.csv  pyproject.toml  requirements.txt
baskets/: forms.py  models.py  urls.py  views.py
baskets/migrations/: 0001_created_baskets_model.py
online_store/: asgi.py  settings.py  urls.py  wsgi.py
orders/: admin.py  models.py  urls.py  views.py
orders/migrations/: 0001_created_orders_model.py
products/: admin.py  forms.py  models.py  urls.py  views.py
products/management/commands/: export_product_residue.py  load_goods.py
products/migrations/: 0001_created_products_model.py  0002_created_baskets_model.py  0003_product_stock.py  0004_remove_product_stock_stock.py  0005_alter_category_name_alter_product_category_and_more.py
static/css/: store.css
templates/: add_category.html  add_product.html  add_to_basket.html  base.html  category_list.html  checkout.html  index.html  order_history.html  product_detail.html  product_list.html  register.html  view_basket.html
templates/registration/: login.html
tests/: factories.py  test_basket_views.py  test_forms.py  test_management_commands.py  test_models.py  test_order_views.py
users/: forms.py  views.py
users/migrations/: 0001_created_users_model.py
