[project]
name = "online-store"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Sumbulov",email = "machalka245@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.4,<7.0.0)"
]

[tool.poetry]
packages = [{include = "online_store", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
